syntax = "proto3";

package rpc;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "hapi/chart/config.proto";
import "hapi/chart/chart.proto";

option go_package = "rpc";

service Draft {
	// GetVersion returns the current version of the server.
	rpc GetVersion(google.protobuf.Empty) returns (Version) {}

	// UpBuild returns a stream of the UpSummary within
	// for a given draft upload.
	//
	// Results are streamed rather than returned at once so
	// each stage of a draft up may be distinguished by the
	// client as a distinct message.
	rpc UpBuild(UpMessage) returns (stream UpMessage) {}

	// A Bidirectional streaming RPC.
  	//
  	// Accepts a stream of UpMessages each representing a separate
	// draft up. This is the api invoked by the draft client when
	// doing a draft up with watch enabled. 
	rpc UpStream(stream UpMessage) returns (stream UpMessage) {}
}

// Version represents the wire description of a server's version. 
message Version {
	string sem_ver = 1;
	string git_commit = 2;
	string git_tree_state = 3;
}

// UpRequest indicates the message sent by a draft client and received
// by a draft server to carry out a draft up command.
message UpRequest {
	string namespace = 1;
	hapi.chart.Chart chart = 2;
	hapi.chart.Config values = 3;
	repeated google.protobuf.Any files = 4;
}

// UpSummary is the message returned when executing a draft up.
message UpSummary {
	// StatusCode is the enumeration of the possible status codes
	// returned for a draft up. TODO: Flush this out.
	enum StatusCode {
		UNKNOWN = 0;
		SUCCESS = 1;
		FAILURE = 2;
	}
	// stage_name indicates the particular stage this summary
	// represents, e.g. "Build Docker Image."
	string stage_name = 1;
	// status_text indicates a string description of the progress
	// or completion of draft up.
	string status_text = 2;
	// status_code indicates the status of the progress or
	// completion of a draft up.
	StatusCode status_code = 3;
}

// UpMessage is the discriminated union of draft up messages
// exchanged between the client and server.
message UpMessage {
	oneof Message {
		UpRequest up_request = 1;
		UpSummary up_summary = 2;
	}
}
